Finished video 1 adding and hooking up BusinessCell, and video 2 auto layout.

--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2xI-yr-O5N">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6jX-Hy-hgZ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Businesses View Controller-->
+        <!--Yelp-->
         <scene sceneID="5L9-Uz-lNK">
             <objects>
                 <viewController id="2xI-yr-O5N" customClass="BusinessesViewController" customModule="Yelp" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,12 +17,136 @@
                     <view key="view" contentMode="scaleToFill" id="XhR-oz-92f">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1ZJ-hX-R0q">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BusinessCell" rowHeight="90" id="6Kd-G8-HPW" customClass="BusinessCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="375" height="90"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Kd-G8-HPW" id="7Wh-At-agv">
+                                            <frame key="frameInset" width="375" height="89"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xvg-Th-2YG" userLabel="Thumb Image View">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="70" id="2ob-ud-ErW"/>
+                                                        <constraint firstAttribute="height" constant="70" id="Gmv-ni-RZH"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BTS-mv-Sbh" userLabel="Rating Image View">
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="Lec-GU-YZs"/>
+                                                        <constraint firstAttribute="width" constant="83" id="cfp-7o-P1r"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. Grand Pu Bah" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X89-Xt-d4t">
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="469 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y1g-xm-Teh">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88 Division St, Mission Bay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2B-OB-za8">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhr-ju-xuP">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="0.07 mi" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wN2-DS-1n2">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKV-0E-ea4">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="s2B-OB-za8" firstAttribute="top" secondItem="Y1g-xm-Teh" secondAttribute="bottom" constant="2" id="02p-ht-8rO"/>
+                                                <constraint firstItem="nhr-ju-xuP" firstAttribute="leading" secondItem="Xvg-Th-2YG" secondAttribute="trailing" constant="8" id="0Mz-NM-IjN"/>
+                                                <constraint firstItem="Y1g-xm-Teh" firstAttribute="top" secondItem="X89-Xt-d4t" secondAttribute="bottom" constant="8" id="4an-Vy-GZZ"/>
+                                                <constraint firstItem="wN2-DS-1n2" firstAttribute="top" secondItem="7Wh-At-agv" secondAttribute="top" constant="8" id="AwF-vZ-ofY"/>
+                                                <constraint firstItem="X89-Xt-d4t" firstAttribute="top" secondItem="7Wh-At-agv" secondAttribute="top" constant="6" id="CUF-O2-YDJ"/>
+                                                <constraint firstItem="BTS-mv-Sbh" firstAttribute="leading" secondItem="Xvg-Th-2YG" secondAttribute="trailing" constant="8" id="EIn-Tr-DAo"/>
+                                                <constraint firstItem="X89-Xt-d4t" firstAttribute="leading" secondItem="Xvg-Th-2YG" secondAttribute="trailing" constant="8" id="Gso-ey-n0r"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nhr-ju-xuP" secondAttribute="bottom" constant="8" id="HXg-Wz-8dT"/>
+                                                <constraint firstItem="Y1g-xm-Teh" firstAttribute="leading" secondItem="BTS-mv-Sbh" secondAttribute="trailing" constant="8" id="NPU-sB-oUR"/>
+                                                <constraint firstItem="Y1g-xm-Teh" firstAttribute="bottom" secondItem="BTS-mv-Sbh" secondAttribute="bottom" id="Nll-Nc-sUs"/>
+                                                <constraint firstItem="nhr-ju-xuP" firstAttribute="top" secondItem="s2B-OB-za8" secondAttribute="bottom" constant="2" id="NtP-w4-Tod"/>
+                                                <constraint firstItem="CKV-0E-ea4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Y1g-xm-Teh" secondAttribute="trailing" constant="8" id="QRS-hY-aEY"/>
+                                                <constraint firstItem="Xvg-Th-2YG" firstAttribute="leading" secondItem="7Wh-At-agv" secondAttribute="leading" constant="8" id="Uag-Vg-GX1"/>
+                                                <constraint firstItem="wN2-DS-1n2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="X89-Xt-d4t" secondAttribute="trailing" constant="8" id="X7L-OT-Agk"/>
+                                                <constraint firstAttribute="trailing" secondItem="wN2-DS-1n2" secondAttribute="trailing" constant="8" id="XTt-3N-ibk"/>
+                                                <constraint firstAttribute="trailing" secondItem="CKV-0E-ea4" secondAttribute="trailing" constant="8" id="aGg-Tn-Rl5"/>
+                                                <constraint firstItem="s2B-OB-za8" firstAttribute="leading" secondItem="Xvg-Th-2YG" secondAttribute="trailing" constant="8" id="bxh-Xv-SXP"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Xvg-Th-2YG" secondAttribute="bottom" constant="8" id="ec3-rv-q1a"/>
+                                                <constraint firstItem="CKV-0E-ea4" firstAttribute="top" secondItem="wN2-DS-1n2" secondAttribute="bottom" constant="8" id="htM-Vb-uM4"/>
+                                                <constraint firstItem="BTS-mv-Sbh" firstAttribute="top" secondItem="X89-Xt-d4t" secondAttribute="bottom" constant="2" id="lZB-qe-bh7"/>
+                                                <constraint firstItem="Xvg-Th-2YG" firstAttribute="top" secondItem="7Wh-At-agv" secondAttribute="top" constant="8" id="rLp-Se-rSG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addressLabel" destination="s2B-OB-za8" id="czP-qv-sU5"/>
+                                            <outlet property="categoriesLabel" destination="nhr-ju-xuP" id="AH5-hw-QmI"/>
+                                            <outlet property="distanceLabel" destination="wN2-DS-1n2" id="dUQ-5O-6L8"/>
+                                            <outlet property="nameLabel" destination="X89-Xt-d4t" id="crY-qr-qZt"/>
+                                            <outlet property="ratingImageView" destination="BTS-mv-Sbh" id="ZKI-Jb-kPk"/>
+                                            <outlet property="reviewCountLabel" destination="Y1g-xm-Teh" id="Jn7-2r-8tc"/>
+                                            <outlet property="thumbImageView" destination="Xvg-Th-2YG" id="moQ-Jc-IpM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="VBY-gq-v8E" firstAttribute="top" secondItem="1ZJ-hX-R0q" secondAttribute="bottom" id="9Vv-uz-FoR"/>
+                            <constraint firstItem="1ZJ-hX-R0q" firstAttribute="top" secondItem="XhR-oz-92f" secondAttribute="top" id="CN0-xp-Hdd"/>
+                            <constraint firstItem="1ZJ-hX-R0q" firstAttribute="leading" secondItem="XhR-oz-92f" secondAttribute="leading" id="Kap-37-hpR"/>
+                            <constraint firstAttribute="trailing" secondItem="1ZJ-hX-R0q" secondAttribute="trailing" id="fQk-d9-cfb"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Yelp" id="dVH-sE-6bW"/>
+                    <connections>
+                        <outlet property="tableView" destination="1ZJ-hX-R0q" id="awd-1s-rCo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgb-4b-F1b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1788" y="358"/>
+            <point key="canvasLocation" x="2727.1999999999998" y="357.57121439280365"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Lmk-OF-08s">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6jX-Hy-hgZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="ZLe-kK-5Qx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.84437099358974366" green="0.0" blue="0.0079047948293981228" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.84437099360000001" green="0.0" blue="0.0079047948290000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2xI-yr-O5N" kind="relationship" relationship="rootViewController" id="nzw-eG-dcO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5oA-Xd-l0M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1788" y="357.57121439280365"/>
         </scene>
     </scenes>
 </document>
